--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Medilab Free Bootstrap HTML5 Template</title>
+    <title>Medilab</title>
     <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
     <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
     
@@ -77,8 +77,12 @@ Diabetes, Heart Diseases. </p>
 							<i class="fa fa-user-md"></i>
 						</div>
 						<div class="icon-info">
-						<input type=button onClick="location.href='cancer.html'" class="btn btn-appoint" value='Breast Cancer'>
-						<p>Cancer is a group of diseases involving abnormal cell growth with the potential to invade or spread to other parts of the body. Not all tumors are cancerous; benign tumors do not spread to other parts of the body.</p>
+						<a href="/cancer" class="btn btn-appoint">Cancer</a>
+						<p>Many works have been done in the detection of cancer
+like prostate and lung cancer and its life expectancy. The
+healthcare domain is the sensitive field and needs accuracy
+and early detection in order to start the treatment and its
+cure in its early stage.</p>
 						</div>
 					</div>
 					<div class="service-info">
@@ -166,35 +170,18 @@ living with diabetes has practically expanded four times since
 	<section id="about" class="section-padding">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-3 col-sm-4 col-xs-12">
+				<div class="col-md-12 col-sm-12 col-xs-12">
 			        <div class="section-title">
-			          <h2 class="head-title lg-line">The Medilap <br>Ultimate Dream</h2>
+			          <h2 class="head-title lg-line">The Medilab <br>Ultimate Dream</h2>
 			          <hr class="botm-line">
-			          <p class="sec-para">We are a team of five Master's students taking the course Web&Data Mining under Prof. Chandrasekar Vuppalapati. 
-					  Our team, Data Miners consists of Kalyani Polagani, Mukul Bajapai, Ritu Singh, Shruti Kulai.
+			          <p class="sec-para">We are a team of four Master's students taking the course Web & Data Mining under Prof. Chandrasekar Vuppalapati. 
+					  Our team, Data Miners consists of Kalyani Polagani, Mukul Bajpai, Ritu Singh, Shruti Kulai.
 					  We used various machine learning algorithms to develop our model.We used these approaches in our
 application for early detection of diseases.</p>
 			          <a href="" style="color: #0cb8b6; padding-top:10px;">Know more..</a>
 			        </div>
 			    </div>
-			    <div class="col-md-9 col-sm-8 col-xs-12">
-			       <div style="visibility: visible;" class="col-sm-9 more-features-box">
-			          <div class="more-features-box-text">
-			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
-			            <div class="more-features-box-text-description">
-				            <h3>It's something important you want to know.</h3>
-				            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
-				        </div>
-			          </div>
-			          <div class="more-features-box-text">
-			            <div class="more-features-box-text-icon"> <i class="fa fa-angle-right" aria-hidden="true"></i> </div>
-			            <div class="more-features-box-text-description">
-				            <h3>It's something important you want to know.</h3>
-				            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. Ut wisi enim ad minim veniam, quis nostrud.</p>
-				        </div>
-                        </div>
-			        </div>
-			    </div>
+		
 			</div>
 		</div>
 	</section>
@@ -345,10 +332,10 @@ application for early detection of diseases.</p>
 				<div class="col-md-4 col-sm-4">
 			      <h3>Contact Info</h3>
 			      <div class="space"></div>
-			      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>321 Awesome Street<br>
-			        New York, NY 17022</p>
+			      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>1, Washington Square<br>
+			        San Jose, CA-95110</p>
 			      <div class="space"></div>
-			      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@companyname.com</p>
+			      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@medilab.com</p>
 			      <div class="space"></div>
 			      <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+1 800 123 1234</p>
 			    </div>
